TA Office Hours 1

--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -109,5 +109,15 @@
 
 
 
+\section{Office Hours (Abhijit)}
+\begin{itemize}
+    \item What do we need to know about the affine group of order $p$, as discussed in Lecture 8.1?
+    \item Friday's office hours will be the last one unless Frank changes something. If the Twitch stream actually happens, Abhijit isn't sure what day it would be. Frank is currently traveling.
+    \item HW8 2c requires 2d.
+    \item Abhijit will email me more info on the $A_5$ question that he "beat a tactical retreat from."
+\end{itemize}
+
+
+
 
 \end{document}
